src/main/java/isa/us/es/aml/parsers/agreements/iagree/iAgreeParser.java
// Generated from C:\Users\ISA Group\Desktop\iAgree\iAgree.g4 by ANTLR 4.1
package isa.us.es.aml.parsers.agreements.iagree;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class iAgreeParser extends Parser {

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int T__3 = 1, T__2 = 2, T__1 = 3, T__0 = 4, TEMPLATE = 5, END_TEMPLATE = 6, AG_OFFER = 7,
            END_AG_OFFER = 8, INITIATOR = 9, RESPONDER = 10, SERVICEPROVIDER = 11, EXPIRATIONTIME = 12,
            DATEFORMAT = 13, GMTZONE = 14, GLOBALPERIOD = 15, DEFINEDPERIOD = 16, METRICS = 17,
            AGREEMENT_TERMS = 18, CREATION_CONSTRAINTS = 19, GUARANTEE_TERMS = 20, SERVICE = 21,
            FEATURES = 22, GLOBALDESCRIPTION = 23, DESCRIPTION = 24, GLOBAL = 25, MONITORABLEPROPERTIES = 26,
            GUARANTEES = 27, AVAL_AT = 28, PROVIDER = 29, CONSUMER = 30, VERSION = 31, EXCEPT = 32,
            DURING = 33, BOOLEAN = 34, INTEGER = 35, FLOAT = 36, NATURAL = 37, NUMBER = 38, SET = 39,
            ENUM = 40, TRUE = 41, FALSE = 42, WITH = 43, END = 44, IF = 45, YEARLY = 46, MONTHLY = 47,
            WEEKLY = 48, DAILY = 49, HOURLY = 50, MINUTELY = 51, PENALTY = 52, REWARD = 53, ON = 54,
            FROM = 55, OF = 56, FOR = 57, AS = 58, CA = 59, CC = 60, PA = 61, PC = 62, LLA = 63, LLC = 64,
            AND = 65, OR = 66, NOT = 67, IMPLIES = 68, ONLY_IF = 69, EXACTLY_ONE = 70, ONE_OR_MORE = 71,
            ALL = 72, LT = 73, GT = 74, EQ = 75, LTE = 76, GTE = 77, BELONGS = 78, UPON = 79, Identifier = 80,
            Integer = 81, S_Integer = 82, Float = 83, S_Float = 84, Boolean = 85, Url = 86, Version = 87,
            Date = 88, Hour = 89, Access = 90, Unit = 91, Operador = 92, String = 93, WS = 94, COMMENT = 95,
            LINE_COMMENT = 96;
    public static final String[] tokenNames = {
        "<INVALID>", "':'", "';'", "','", "'..'", "'Template'", "'EndTemplate'",
        "'AgreementOffer'", "'EndAgreementOffer'", "'Initiator'", "'Responder'",
        "'ServiceProvider'", "'ExpirationTime'", "'DateFormat'", "'GMTZone'",
        "'GlobalPeriod'", "'DefinedPeriod'", "'Metrics'", "'AgreementTerms'",
        "'CreationConstraints'", "'GuaranteeTerms'", "'Service'", "'Features/Operations'",
        "'GlobalDescription'", "'Description'", "'global'", "'MonitorableProperties'",
        "'guarantees'", "'availableAt.'", "'Provider'", "'Consumer'", "'version'",
        "'except'", "'during'", "'boolean'", "'integer'", "'float'", "'natural'",
        "'number'", "'set'", "'enum'", "'true'", "'false'", "'with'", "'end'",
        "'if'", "'yearly'", "'monthly'", "'weekly'", "'daily'", "'hourly'", "'minutely'",
        "'penalty'", "'reward'", "'on'", "'from'", "'of'", "'for'", "'as'", "'['",
        "']'", "'('", "')'", "'{'", "'}'", "'AND'", "'OR'", "'NOT'", "'IMPLIES'",
        "'onlyIf'", "'exactly one'", "'one or more'", "'all'", "'<'", "'>'", "'='",
        "'<='", "'>='", "'belongs'", "'upon'", "Identifier", "Integer", "S_Integer",
        "Float", "S_Float", "Boolean", "Url", "Version", "Date", "Hour", "Access",
        "Unit", "Operador", "String", "WS", "COMMENT", "LINE_COMMENT"
    };
    public static final int RULE_entry = 0, RULE_template = 1, RULE_agOffer = 2, RULE_template_def = 3,
            RULE_ag_def = 4, RULE_temp_properties = 5, RULE_agreementTerms = 6, RULE_creationConstraints = 7,
            RULE_agreementTerms_def = 8, RULE_creationConstraints_def = 9, RULE_creationConstraint = 10,
            RULE_initiator_prop = 11, RULE_responder_prop = 12, RULE_serviceProvider_prop = 13,
            RULE_expirationTime_prop = 14, RULE_dateFormat_prop = 15, RULE_gmtZone_prop = 16,
            RULE_globalPeriod_prop = 17, RULE_definedPeriod_prop = 18, RULE_metrics_prop = 19,
            RULE_datePeriod_def = 20, RULE_temporality = 21, RULE_period = 22, RULE_period_def = 23,
            RULE_service = 24, RULE_features = 25, RULE_globalDescription = 26, RULE_descriptions = 27,
            RULE_feature = 28, RULE_description = 29, RULE_monitorableProperties = 30,
            RULE_global_MonitorableProperties = 31, RULE_local_MonitorableProperties = 32,
            RULE_guaranteeTerms = 33, RULE_guaranteeTerm = 34, RULE_grouped_guaranteeTerm = 35,
            RULE_guarantee_def = 36, RULE_slo = 37, RULE_serviceScope = 38, RULE_qualifyingCondition = 39,
            RULE_compensations = 40, RULE_compensationsInterval = 41, RULE_compensation = 42,
            RULE_id = 43, RULE_versionNumber = 44, RULE_url = 45, RULE_key_value_prop = 46,
            RULE_assig_value = 47, RULE_operation = 48, RULE_expression = 49, RULE_op = 50,
            RULE_cuantif = 51, RULE_type = 52, RULE_list = 53, RULE_listArg = 54,
            RULE_range = 55;
    public static final String[] ruleNames = {
        "entry", "template", "agOffer", "template_def", "ag_def", "temp_properties",
        "agreementTerms", "creationConstraints", "agreementTerms_def", "creationConstraints_def",
        "creationConstraint", "initiator_prop", "responder_prop", "serviceProvider_prop",
        "expirationTime_prop", "dateFormat_prop", "gmtZone_prop", "globalPeriod_prop",
        "definedPeriod_prop", "metrics_prop", "datePeriod_def", "temporality",
        "period", "period_def", "service", "features", "globalDescription", "descriptions",
        "feature", "description", "monitorableProperties", "global_MonitorableProperties",
        "local_MonitorableProperties", "guaranteeTerms", "guaranteeTerm", "grouped_guaranteeTerm",
        "guarantee_def", "slo", "serviceScope", "qualifyingCondition", "compensations",
        "compensationsInterval", "compensation", "id", "versionNumber", "url",
        "key_value_prop", "assig_value", "operation", "expression", "op", "cuantif",
        "type", "list", "listArg", "range"
    };

    @Override
    public String getGrammarFileName() {
        return "iAgree.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public iAgreeParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class EntryContext extends ParserRuleContext {

        public TemplateContext template() {
            return getRuleContext(TemplateContext.class, 0);
        }

        public TerminalNode END_TEMPLATE() {
            return getToken(iAgreeParser.END_TEMPLATE, 0);
        }

        public AgOfferContext agOffer() {
            return getRuleContext(AgOfferContext.class, 0);
        }

        public TerminalNode END_AG_OFFER() {
            return getToken(iAgreeParser.END_AG_OFFER, 0);
        }

        public EntryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_entry;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitEntry(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final EntryContext entry() throws RecognitionException {
        EntryContext _localctx = new EntryContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_entry);
        try {
            setState(118);
            switch (_input.LA(1)) {
                case TEMPLATE:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(112);
                        template();
                        setState(113);
                        match(END_TEMPLATE);
                    }
                    break;
                case AG_OFFER:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(115);
                        agOffer();
                        setState(116);
                        match(END_AG_OFFER);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TemplateContext extends ParserRuleContext {

        public Template_defContext template_def() {
            return getRuleContext(Template_defContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(iAgreeParser.Identifier, 0);
        }

        public TerminalNode VERSION() {
            return getToken(iAgreeParser.VERSION, 0);
        }

        public TerminalNode TEMPLATE() {
            return getToken(iAgreeParser.TEMPLATE, 0);
        }

        public VersionNumberContext versionNumber() {
            return getRuleContext(VersionNumberContext.class, 0);
        }

        public TemplateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_template;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitTemplate(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final TemplateContext template() throws RecognitionException {
        TemplateContext _localctx = new TemplateContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_template);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(120);
                match(TEMPLATE);
                setState(121);
                match(Identifier);
                setState(122);
                match(VERSION);
                setState(123);
                versionNumber();
                setState(124);
                template_def();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AgOfferContext extends ParserRuleContext {

        public List<TerminalNode> Identifier() {
            return getTokens(iAgreeParser.Identifier);
        }

        public List<TerminalNode> VERSION() {
            return getTokens(iAgreeParser.VERSION);
        }

        public Ag_defContext ag_def() {
            return getRuleContext(Ag_defContext.class, 0);
        }

        public TerminalNode Identifier(int i) {
            return getToken(iAgreeParser.Identifier, i);
        }

        public TerminalNode VERSION(int i) {
            return getToken(iAgreeParser.VERSION, i);
        }

        public VersionNumberContext versionNumber(int i) {
            return getRuleContext(VersionNumberContext.class, i);
        }

        public TerminalNode TEMPLATE() {
            return getToken(iAgreeParser.TEMPLATE, 0);
        }

        public TerminalNode FOR() {
            return getToken(iAgreeParser.FOR, 0);
        }

        public List<VersionNumberContext> versionNumber() {
            return getRuleContexts(VersionNumberContext.class);
        }

        public TerminalNode AG_OFFER() {
            return getToken(iAgreeParser.AG_OFFER, 0);
        }

        public AgOfferContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_agOffer;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitAgOffer(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final AgOfferContext agOffer() throws RecognitionException {
        AgOfferContext _localctx = new AgOfferContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_agOffer);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                match(AG_OFFER);
                setState(127);
                match(Identifier);
                setState(128);
                match(VERSION);
                setState(129);
                versionNumber();
                setState(130);
                match(FOR);
                setState(132);
                _la = _input.LA(1);
                if (_la == TEMPLATE) {
                    {
                        setState(131);
                        match(TEMPLATE);
                    }
                }

                setState(134);
                match(Identifier);
                setState(135);
                match(VERSION);
                setState(136);
                versionNumber();
                setState(137);
                ag_def();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Template_defContext extends ParserRuleContext {

        public Temp_propertiesContext temp_properties(int i) {
            return getRuleContext(Temp_propertiesContext.class, i);
        }

        public List<Temp_propertiesContext> temp_properties() {
            return getRuleContexts(Temp_propertiesContext.class);
        }

        public AgreementTermsContext agreementTerms() {
            return getRuleContext(AgreementTermsContext.class, 0);
        }

        public CreationConstraintsContext creationConstraints() {
            return getRuleContext(CreationConstraintsContext.class, 0);
        }

        public Template_defContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_template_def;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitTemplate_def(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Template_defContext template_def() throws RecognitionException {
        Template_defContext _localctx = new Template_defContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_template_def);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INITIATOR) | (1L << SERVICEPROVIDER) | (1L << EXPIRATIONTIME) | (1L << DATEFORMAT) | (1L << GMTZONE) | (1L << GLOBALPERIOD) | (1L << DEFINEDPERIOD) | (1L << METRICS) | (1L << PROVIDER) | (1L << CONSUMER))) != 0) || _la == Identifier) {
                    {
                        {
                            setState(139);
                            temp_properties();
                        }
                    }
                    setState(144);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(145);
                agreementTerms();
                setState(147);
                _la = _input.LA(1);
                if (_la == CREATION_CONSTRAINTS) {
                    {
                        setState(146);
                        creationConstraints();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Ag_defContext extends ParserRuleContext {

        public Temp_propertiesContext temp_properties(int i) {
            return getRuleContext(Temp_propertiesContext.class, i);
        }

        public List<Temp_propertiesContext> temp_properties() {
            return getRuleContexts(Temp_propertiesContext.class);
        }

        public AgreementTermsContext agreementTerms() {
            return getRuleContext(AgreementTermsContext.class, 0);
        }

        public Ag_defContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ag_def;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitAg_def(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Ag_defContext ag_def() throws RecognitionException {
        Ag_defContext _localctx = new Ag_defContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_ag_def);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(152);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INITIATOR) | (1L << SERVICEPROVIDER) | (1L << EXPIRATIONTIME) | (1L << DATEFORMAT) | (1L << GMTZONE) | (1L << GLOBALPERIOD) | (1L << DEFINEDPERIOD) | (1L << METRICS) | (1L << PROVIDER) | (1L << CONSUMER))) != 0) || _la == Identifier) {
                    {
                        {
                            setState(149);
                            temp_properties();
                        }
                    }
                    setState(154);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(155);
                agreementTerms();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Temp_propertiesContext extends ParserRuleContext {

        public GlobalPeriod_propContext globalPeriod_prop() {
            return getRuleContext(GlobalPeriod_propContext.class, 0);
        }

        public DefinedPeriod_propContext definedPeriod_prop() {
            return getRuleContext(DefinedPeriod_propContext.class, 0);
        }

        public ExpirationTime_propContext expirationTime_prop() {
            return getRuleContext(ExpirationTime_propContext.class, 0);
        }

        public ServiceProvider_propContext serviceProvider_prop() {
            return getRuleContext(ServiceProvider_propContext.class, 0);
        }

        public DateFormat_propContext dateFormat_prop() {
            return getRuleContext(DateFormat_propContext.class, 0);
        }

        public Initiator_propContext initiator_prop() {
            return getRuleContext(Initiator_propContext.class, 0);
        }

        public GmtZone_propContext gmtZone_prop() {
            return getRuleContext(GmtZone_propContext.class, 0);
        }

        public Metrics_propContext metrics_prop() {
            return getRuleContext(Metrics_propContext.class, 0);
        }

        public Responder_propContext responder_prop() {
            return getRuleContext(Responder_propContext.class, 0);
        }

        public Temp_propertiesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_temp_properties;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitTemp_properties(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Temp_propertiesContext temp_properties() throws RecognitionException {
        Temp_propertiesContext _localctx = new Temp_propertiesContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_temp_properties);
        try {
            setState(166);
            switch (_input.LA(1)) {
                case INITIATOR:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(157);
                        initiator_prop();
                    }
                    break;
                case PROVIDER:
                case CONSUMER:
                case Identifier:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(158);
                        responder_prop();
                    }
                    break;
                case SERVICEPROVIDER:
                    enterOuterAlt(_localctx, 3);
                     {
                        setState(159);
                        serviceProvider_prop();
                    }
                    break;
                case EXPIRATIONTIME:
                    enterOuterAlt(_localctx, 4);
                     {
                        setState(160);
                        expirationTime_prop();
                    }
                    break;
                case DATEFORMAT:
                    enterOuterAlt(_localctx, 5);
                     {
                        setState(161);
                        dateFormat_prop();
                    }
                    break;
                case GMTZONE:
                    enterOuterAlt(_localctx, 6);
                     {
                        setState(162);
                        gmtZone_prop();
                    }
                    break;
                case GLOBALPERIOD:
                    enterOuterAlt(_localctx, 7);
                     {
                        setState(163);
                        globalPeriod_prop();
                    }
                    break;
                case DEFINEDPERIOD:
                    enterOuterAlt(_localctx, 8);
                     {
                        setState(164);
                        definedPeriod_prop();
                    }
                    break;
                case METRICS:
                    enterOuterAlt(_localctx, 9);
                     {
                        setState(165);
                        metrics_prop();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AgreementTermsContext extends ParserRuleContext {

        public TerminalNode AGREEMENT_TERMS() {
            return getToken(iAgreeParser.AGREEMENT_TERMS, 0);
        }

        public AgreementTerms_defContext agreementTerms_def() {
            return getRuleContext(AgreementTerms_defContext.class, 0);
        }

        public AgreementTermsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_agreementTerms;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitAgreementTerms(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final AgreementTermsContext agreementTerms() throws RecognitionException {
        AgreementTermsContext _localctx = new AgreementTermsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_agreementTerms);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(168);
                match(AGREEMENT_TERMS);
                setState(169);
                agreementTerms_def();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CreationConstraintsContext extends ParserRuleContext {

        public CreationConstraints_defContext creationConstraints_def() {
            return getRuleContext(CreationConstraints_defContext.class, 0);
        }

        public TerminalNode CREATION_CONSTRAINTS() {
            return getToken(iAgreeParser.CREATION_CONSTRAINTS, 0);
        }

        public CreationConstraintsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_creationConstraints;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitCreationConstraints(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final CreationConstraintsContext creationConstraints() throws RecognitionException {
        CreationConstraintsContext _localctx = new CreationConstraintsContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_creationConstraints);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                match(CREATION_CONSTRAINTS);
                setState(172);
                creationConstraints_def();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AgreementTerms_defContext extends ParserRuleContext {

        public ServiceContext service() {
            return getRuleContext(ServiceContext.class, 0);
        }

        public MonitorablePropertiesContext monitorableProperties() {
            return getRuleContext(MonitorablePropertiesContext.class, 0);
        }

        public GuaranteeTermsContext guaranteeTerms() {
            return getRuleContext(GuaranteeTermsContext.class, 0);
        }

        public AgreementTerms_defContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_agreementTerms_def;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof iAgreeVisitor) {
                return ((iAgreeVisitor<? extends T>) visitor).visitAgreementTerms_def(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }
